--- a/.github/workflows/rake.yml
+++ b/.github/workflows/rake.yml
@@ -9,9 +9,9 @@ name: Ruby
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
   test:
