--- a/.github/workflows/rake.yml
+++ b/.github/workflows/rake.yml
@@ -29,5 +29,7 @@ jobs:
         ruby-version: 2.7.0
     - name: Install dependencies
       run: bundle install
+    - name: setup db
+      run: rails db:create db:migrate db:seed
     - name: Run tests
       run: bundle exec rake
