--- a/.github/workflows/rake.yml
+++ b/.github/workflows/rake.yml
@@ -29,6 +29,8 @@ jobs:
         ruby-version: 2.7.0
     - name: Install dependencies
       run: bundle install
+    - name: yarn
+      run: yarn install --check-files
     - name: setup db
       run: rails db:create db:migrate db:seed
     - name: Run tests
