--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,8 +1,13 @@
-development:
+
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: justodoit
   adapter: async
 
 test:
-  adapter: test
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: justodoit
 
 production:
   adapter: redis
